<resources>
    <string name="app_name">Aispresso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="onboarding_slide1_title">Cek kualitas</string>
    <string name="onboarding_slide1_subtitle">biji kopi</string>
    <string name="onboarding_slide1_desc">Kamu bisa mengecek kualitas biji kopi kamu.</string>

    <string name="onboarding_slide2_title">Cek penyakit</string>
    <string name="onboarding_slide2_subtitle">daun tanaman</string>
    <string name="onboarding_slide2_desc">Kamu juga bisa mengetahui penyakit tanamanmu.</string>
    <string name="UI_info_camera">
        Here is an explanation of some of the buttons : \n
        👉🏻 back button to return to previous page \n
        👉🏻 information button to display additional information \n
        👉🏻 gallery button to upload image from gallery \n
        👉🏻 shutter button to take a picture using the camera \n
        👉🏻 switch button to rotate camera lens
    </string>


    <string name="Miner">
        How to fix it : \n
        👉🏻 Protect plants with a green house, thus flies and other insects cannot enter the garden area. \n
        👉🏻 Install insect traps or yellow traps on plant areas. \n
        👉🏻 On plants that have already been attacked by leaf miners, cut the petioles that have been attacked by the pest and then burned. \n
        👉🏻 Carry out biological control by spraying with vegetable pesticides so that no chemical residues are left on the plants. \n
        👉🏻 Lakukan pengendalian secara alamiah dengan cara melakukan rotasi tanaman, lakukan penanaman dengan jenis tanaman yang berganti-ganti.
    </string>

    <string name="phoma">
        How to fix it : \n
        👉🏻 Biological Control : The disease can be controlled by spraying copper oxychloride (0.3%) right after the appearance of the first symptoms and subsequent sprays at 20-day intervals. Treating fruits with neem leaf extract with a combination of cold storage completely inhibits the growth of a series of pathogens on fruits during storage. \n
        👉🏻 Chemical Control : Always consider an integrated approach with preventive measures along with biological treatments if available. Spraying fungicides after the initial appearance, followed by 0.3% miltox at 20-day intervals work well to curb the fungus. \n
        👉🏻 Precautions : Clean the storage facility thoroughly to avoid mold growth during storage. \n
    </string>
    <string name="rust">
        How to fix it : \n
        👉🏻 Biological Control : Bioinsecticides based on species Bacillus subtilis, Arthrobacter and Streptomyces have a noticeable effect in inhibiting the progression of the disease. \n
        👉🏻 Chemical Control :Always consider an integrated approach with preventive measures along with biological treatments. Triazole and strobilurin fungicides show promising results in controlling chickpea rust. \n
        👉🏻 Precautions :  \n
            1. Plant resistant or tolerant varieties. \n
            2. Do not plant chickpeas in infected places. \n
            3. Intercrop with non-host plants such as corn. \n
            4. Remove weeds and wild plants from the field. \n
            5. Avoid over-irrigation and do not use bulk sprinklers. \n
            6. Cut and remove all infected parts of the plant. \n
            7. After planting, clean and remove all plant debris. \n
            8. Choose and schedule planting and irrigation dates carefully to avoid prolonged leaf wetting when temperatures are high.
            9. Avoid excessive nitrogen use and ensure adequate potassium fertilization.  \n
    </string>

    <!--kopi-->
    <string name="Peaberry">
        👉🏻 Highest price in 2023 : \n
            Rp. 129.000  \n
        👉🏻 lowest price in 2023 \n
            Rp. 89.000
    </string>
    <string name="Longberry">
        👉🏻 Highest price in 2023 : \n
            Rp. 225.000  \n
        👉🏻 lowest price in 2023 \n
            Rp. 179.000
    </string>
    <string name="Premium">
        👉🏻 Highest price in 2023 : \n
            Rp. 325.000  \n
        👉🏻 lowest price in 2023 \n
            Rp. 279.000
    </string>
    <string name="Defect">
        Try another image
    </string>


    <string name="UI_info_options_camera">
        Please select the processing option
    </string>

    <string name="logout_permession">
        Are you sure wan\'t to logout ?
    </string>
    <string name="chat_constructor">
        chat is under constructor
    </string>
    <string name="counsultant_constructor">
        counsultant is under constructor
    </string>
    <string name="forum_constructor">
        forum is under constructor
    </string>
    <string name="investor_constructor">
        investor is under constructor
    </string>

    <string name="onboarding_slide3_title">Cari investor kamu </string>
    <string name="onboarding_slide3_subtitle">Di aispresso</string>
    <string name="onboarding_slide3_desc">Berpartisipasi dalam perekonomian lokal.</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <string name="UI_validation_password_rules">Password must contain at least 8 characters</string>
    <string name="UI_validation_invalid_email">Email format is invalid</string>
    <string name="UI_validation_empty_email_password">Field Email and Password must be filled</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="notification">Notification</string>
    <string name="wheater">Weather</string>
    <string name="profile_user">Profile</string>
    <string name="refresh">refresh</string>
    <string name="loading">Loading</string>
    <string name="menu_title_blank" translatable="false">" "</string>
    <string name="const_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="UI_error_camera_take_photo">Failed take a picture</string>
    <string name="image_contentDescription">image</string>
    <string name="miles_per_hour">miles/hour</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="your_name">name</string>
    <string name="phone_number">phone</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="load_image">Load Image</string>
    <string name="take_image">Take Image</string>
    <string name="output">Output:</string>
    <string name="result">Result</string>
    <string name="result_history">Result :</string>
    <string name="click_on_the_result_text_to_search_on_google">Click on the result text to search on Google</string>
    <string name="place_holder">Place Holder</string>
    <string name="delete">delete</string>
    <string name="error_no_hardware">Aplikasi Membutuhkan FingerPrint</string>
    <string name="error_hw_unavailable">Finger Print Tidak Bekerja</string>
    <string name="error_none_enrolled">Tidak Ada Sidik Jari yang Terdaftar</string>
    <string name="success">Otentikasi Berhasil</string>
    <string name="title_biometric_prompt">Aispresso</string>
    <string name="description_biometric_prompt">Gunakan Sidik Jari Untuk Masuk</string>
    <string name="dashboard">Dashboard</string>
    <string name="username">Username</string>
    <string name="explore">Explore our features!</string>
    <string name="investor">Investor</string>
    <string name="consultation">Consultation</string>
    <string name="forum">Forum</string>
    <string name="chat">Chat</string>
    <string name="articles">Articles</string>
    <string name="view_all">View All</string>
    <string name="temperature">Temperature</string>
    <string name="classified_as">Classified as:</string>
    <string name="leaf">Leaf</string>
    <string name="coffe">Coffe</string>
    <string name="coffe_classify">Coffe Classify</string>
    <string name="confidences">Confidences:</string>
    <string name="save">Save</string>
    <string name="take_picture">Take Picture</string>
    <string name="empty">(empty)</string>
    <string name="leaf_classify">Leaf Classify</string>
    <string name="upload_image">Upload Image</string>
    <string name="ok">Ok</string>
    <string name="counsultant_recommendation">Counsultant Recommendation</string>
    <string name="counsultant">Counsultant</string>
    <string name="detail_history">Detail History</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_wan_t_to_logout">Are you sure wan\'t to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="ad_info">Ad was loaded.</string>
    <string name="rewarded_info">"User earned the reward.</string>
    <string name="show_rewarded_ads">Show Rewarded Ads</string>
    <string name="show_interstitial_ads">Show Interstitial Ads</string>
</resources>