<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_container"
    android:padding="32dp">


    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="5dp"
        android:text="@string/are_you_sure_wan_t_to_logout"
        android:textColor="@color/secondary_color"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message">

        <Button
            android:id="@+id/button_yes"
            android:layout_width="100dp"
            android:layout_height="70dp"
            style="@style/firstbutton"
            android:text="@string/yes"/>

        <Button
            android:id="@+id/button_no"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            style="@style/firstbutton"
            android:text="@string/no"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>