<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".view.camera.leafprocessing.LeafActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_back"/>

    <TextView
        android:id="@+id/tvCoffeClasify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leaf_classify"
        android:textAlignment="center"
        android:layout_marginVertical="18dp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/secondary_color"
        android:textSize="20sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFoto"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tvCoffeClasify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_contentDescription"
            android:src="@drawable/baseline_insert_photo_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_nomor"
            app:layout_constraintTop_toBottomOf="@+id/label_foto"
            tools:ignore="ImageContrastCheck" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/classified_as"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/label_classified"
        app:layout_constraintTop_toBottomOf="@+id/cvFoto"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@+id/cvFoto"
        android:layout_marginTop="10sp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/empty"
        android:textColor="@color/alert_text"
        android:textStyle="bold"
        android:textSize="27sp"
        android:id="@+id/result"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/label_classified"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confidencesText"
        android:text="@string/confidences"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/cvFoto"
        app:layout_constraintStart_toEndOf="@+id/guideline1"
        android:layout_below="@+id/result"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/empty"
        android:textColor="@color/secondary_color"
        android:textSize="20sp"
        android:id="@+id/confidence"
        app:layout_constraintTop_toBottomOf="@+id/confidencesText"
        app:layout_constraintStart_toEndOf="@+id/guideline1"/>


    <Button
        android:id="@+id/button"
        style="@style/firstbutton"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/secondary_color"
        android:text="@string/take_picture"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:transitionName="action"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintStart_toStartOf="parent" />



    <Button
        android:id="@+id/save"
        style="@style/firstbutton"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/secondary_color"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:visibility="invisible"
        android:transitionName="action"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <Button
        android:id="@+id/invisible_save"
        style="@style/invisbutton"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/gray_button"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:visibility="visible"
        android:transitionName="action"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="180dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/bannerID"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>