<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.auth.LoginFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="150dp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="222dp"
        android:layout_height="155dp"
        android:orientation="vertical"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
<<<<<<< HEAD
        app:layout_constraintStart_toStartOf="parent"/>
=======
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/label_greet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:text="Welcome to"
            android:textColor="@color/secondary_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/label_appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_greet"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/secondary_color"
            android:textSize="25sp" />

    </RelativeLayout>
>>>>>>> room-presitance


    <TextView
        android:id="@+id/label_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/secondary_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:transitionName="auth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <com.bangkit.aispresso.view.customview.EditTextEmail
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:transitionName="email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_auth" />

    <com.bangkit.aispresso.view.customview.EditTextPassword
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="15dp"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:textColor="@color/secondary_color"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:transitionName="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email" />

    <Button
        android:id="@+id/btn_action"
        style="@style/firstbutton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
<<<<<<< HEAD
        android:text="@string/login"
=======
>>>>>>> room-presitance
        android:backgroundTint="@color/secondary_color"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:transitionName="action"
        app:backgroundTint="@null"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password" />

    <LinearLayout
        android:id="@+id/container_misc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:transitionName="misc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_action">

        <TextView
            android:id="@+id/label_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/secondary_color" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@color/secondary_color"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>